--- a/SciCalc/SciCalc/SciCalc.csproj
+++ b/SciCalc/SciCalc/SciCalc.csproj
@@ -63,6 +63,7 @@
 		<PackageReference Include="Microsoft.Maui.Controls.Compatibility" Version="$(MauiVersion)" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="8.0.1" />
 		<PackageReference Include="Microsoft.UI.Xaml" Version="2.8.2" />
+		<PackageReference Include="NCalcSync" Version="5.3.1" />
 	</ItemGroup>
 
 	<ItemGroup>
